# physical-ai-humanoid-robotics-book

./: .gitignore  404.html  AUTH-DEBUG-FINDINGS.md  AUTH-DEBUGGING.md  AUTH-FIX-APPLIED.md  AUTH-FIX-SUMMARY.md  AUTH-ISSUE-FIX-SUMMARY.md  AUTHENTICATION-FIX-COMPLETE.md  AUTHENTICATION-TESTING.md  BETTER-AUTH-EMAIL-VALIDATION-DEBUG.md  BETTER-AUTH-PASSWORD-FIELD-ANSWER.md  BETTER-AUTH-PASSWORD-FIELD-INFO.md  CHECK-BROWSER-DEBUG.md  CLAUDE.md  COMPLETE-FLOW-TEST-FINAL-SUMMARY.md  COMPLETE-FLOW-TEST-RESULTS-FINAL.md  COMPLETE-FLOW-TEST-RESULTS.md  COMPLETE-FLOW-TEST-SUMMARY.md  DATABASE-PREFERENCES-TABLE.md  DATABASE-SSL-FIX.md  DEBUG-CONSOLE.md  DEBUG-TOGGLE-VISIBILITY.md  FIX-TOGGLE-NOT-VISIBLE.md  FRONTEND-URLS.md  HOW-TO-VIEW-FASTAPI-LOGS.md  QUICK-FIX-TOGGLE.md  QUICK-TEST.md  README.md  SIGNIN-401-FIX-V2.md  SIGNIN-401-FIX.md  SIGNIN-DEBUG-FINDINGS.md  SIGNUP-FLOW-COMPLETE.md  TEST-DOCS-TOGGLE.md  TESTING-GUIDE.md  TRANSLATION-TOGGLE-DEBUG.md  TRANSLATION-TOGGLE-VERIFIED.md  TRANSLATION-TOGGLE-VISIBILITY-FIXED.md  TROUBLESHOOTING.md  USER-STORY-4-TESTING-GUIDE.md  VECTOR-DB-GUIDE.md  (+6 more)
backend/: .env.example  .gitignore  README.md  alembic.ini  clear_alembic_version.py  ingest_content.py  main.py  pyproject.toml  setup_qdrant.py  test-auth-integration.sh  test-complete-auth-flow.sh  test-fresh-session.sh  test-new-cookie-config.sh  test-questionnaire-auth.sh  test-signed-token.py  test-token-validation.py  test_connections.py  test_rag_agent.py  test_ros_search.py
backend/alembic/: env.py
backend/auth-service/: .env.example  CORS-FIX.md  PRODUCTION-CONFIG.md  (+7 more)
(+312 files in other folders)
