[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "openai-agents>=0.6.1",
    "psycopg[binary]>=3.2.13",
    "qdrant-client>=1.16.1",
    "ruff>=0.14.6",
    "structlog>=25.5.0",
]
